--- a/docs/overrides/partials/logo.html
+++ b/docs/overrides/partials/logo.html
@@ -1,34 +1,43 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 <style>
-    /** just hide title, use this section instead */
-    .md-header__ellipsis {
-        display: none;
-    }
+/** just hide title, use this section instead */
+.md-header__ellipsis {
+    display: none;
+}
 
-    .ossiq-logo {
-        display: flex;
-        align-items: center;
-    }
+.ossiq-logo {
+    display: flex;
+    align-items: center;
+}
 
-    .ossiq-logo h1 {
-        font-family: 'Raleway', sans-serif;
+.ossiq-logo h1 {
+    font-family: 'Raleway', sans-serif;
 
-        letter-spacing: 0.025em;
-        font-weight: 400;
-        font-size: 1rem;
-        line-height: 1.75rem;
+    letter-spacing: 0.025em;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.75rem;
 
-        margin-block-start: 0;
-        margin-block-end: 0;
-        margin-inline-start: 0;
-        margin-inline-end: 0;
-        unicode-bidi: isolate;
-    }
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    unicode-bidi: isolate;
+}
 
-    .ossiq-logo .pl-5 {
-        padding-left: 1.25rem;
-        display: inline-block;
-    }
+.ossiq-logo .pl-5 {
+    padding-left: 1.25rem;
+    display: inline-block;
+}
+
+.marker-check {
+    margin-left:1em;
+    margin-right:0.5em;
+    display:inline-block;
+    vertical-align:middle;
+
+}
 </style>
 <div class="ossiq-logo">
     <h1 class="text-xl font-normal tracking-wide">OSS IQ</h1>
